tests/dataset/tpc-ds/compiler/java/q8.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq81644558321/001/Q8.java:191: error: cannot find symbol
    reverse(substr("zip", 0, 2));
            ^
  symbol:   method substr(String,int,int)
  location: class Q8
/tmp/TestJavaCompiler_TPCDSQueriesq81644558321/001/Q8.java:202: error: cannot find symbol
                    if (!(Objects.equals(substr(s.s_zip, 0, 2), substr(ca.ca_zip, 0, 2)))) continue;
                                         ^
  symbol: method substr(String,int,int)
/tmp/TestJavaCompiler_TPCDSQueriesq81644558321/001/Q8.java:202: error: cannot find symbol
                    if (!(Objects.equals(substr(s.s_zip, 0, 2), substr(ca.ca_zip, 0, 2)))) continue;
                                                                ^
  symbol: method substr(String,int,int)
/tmp/TestJavaCompiler_TPCDSQueriesq81644558321/001/Q8.java:205: error: cannot find symbol
                        if (!(zip_list.contains(substr(ca.ca_zip, 0, 5)))) continue;
                                                ^
  symbol: method substr(String,int,int)
4 errors
